--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -208,6 +208,20 @@
     animation: nudge-right 1.5s ease-in-out infinite;
 }
 
+/* Hide scrollbar but keep scroll functionality */
+.scrollbar-none {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+.scrollbar-none::-webkit-scrollbar {
+    display: none;
+}
+
+/* Safe area for sticky top bars on iOS */
+.safe-top {
+    padding-top: env(safe-area-inset-top, 0px);
+}
+
 /* Alpine x-cloak */
 [x-cloak] {
     display: none !important;
